--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600,600i,700,700i,900&display=swap');
+@import 'assets/styles/main.scss';
+
+html, body { height: 100%; }
+body { margin: 0; font-family: $font-stack; background: #FDFEFE; }
+
+:root {
+  font-size: 12px;
+}
+
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.mat-card-header-text {
+  margin: 0 !important;
+}
+
+.mat-card-header .mat-card-title {
+  font-size: 16px !important;
+}
+
+.mat-card {
+  margin-bottom: 15px;
+}
+
+.mat-card-avatar {
+  overflow: hidden;
+  margin-right: 10px;
+  border: 2px solid #ddd;
+}
